unpackaged/objects/JSON_Web_Token__mdt.object
<CustomObject>
  <fields>
    <fullName>Algorithm__c</fullName>
    <label>Algorithm</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Audiences__c</fullName>
    <label>Audiences</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>RSA_Key__c</fullName>
    <label>RSA Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Subscriber__c</fullName>
    <label>Subscriber</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Token_Duration__c</fullName>
    <label>Token Duration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>JSON Web Token</label>
  <pluralLabel>JSON Web Tokens</pluralLabel>
</CustomObject>